Update engine/src/test/java/com/arcadedb/serializer/json/JSONEmptyArraySerializationTest.java
Co-authored-by: gemini-code-assist[bot] <176961590+gemini-code-assist[bot]@users.noreply.github.com>